--- a/package.json
+++ b/package.json
@@ -15,8 +15,9 @@
     "@mui/icons-material": "^5.14.3",
     "@mui/material": "^5.14.4",
     "@privy-io/react-auth": "^1.35.1",
-    "@rainbow-me/rainbowkit": "^1.3.3",
+    "@rainbow-me/rainbowkit": "^2.0.0",
     "@reduxjs/toolkit": "^1.9.5",
+    "@tanstack/react-query": "^5.22.2",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
@@ -54,8 +55,8 @@
     "sendbird": "^3.1.33",
     "styled-components": "^6.0.7",
     "uniqid": "^5.4.0",
-    "viem": "^2.5.0",
-    "wagmi": "^2.5.1",
+    "viem": "2.x",
+    "wagmi": "^2.5.7",
     "web-vitals": "^2.1.0",
     "web3modal": "^1.9.12"
   },
