--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
     "@mui/icons-material": "^5.14.3",
     "@mui/material": "^5.14.4",
     "@privy-io/react-auth": "^1.35.1",
-    "@rainbow-me/rainbowkit": "^2.0.0",
+    "@rainbow-me/rainbowkit": "^2.0.1",
     "@reduxjs/toolkit": "^1.9.5",
-    "@tanstack/react-query": "^5.22.2",
+    "@tanstack/react-query": "^5.24.7",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
@@ -45,6 +45,7 @@
     "next": "14.0.3",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
+    "react-chat-engine": "^1.11.28",
     "react-copy-to-clipboard": "^5.1.0",
     "react-curved-text": "^2.0.2",
     "react-dom": "^18.2.0",
