--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "sanitize-html": "^2.11.0",
     "sass": "^1.65.1",
     "sendbird": "^3.1.33",
+    "sharp": "^0.33.2",
     "styled-components": "^6.0.7",
     "uniqid": "^5.4.0",
     "viem": "2.x",
